a11y fix for colorpalette so that hover state is visible, refs #10527
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22369 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1078,6 +1078,10 @@ img.dijitColorPaletteUnder {
 	margin: -1px;
 }
 
+.dijit_a11y  .dijitColorPalette .dijitPaletteCellHover .dijitPaletteImg {
+	border: 2px solid #000 !important;
+}
+
 /* AccordionContainer */
 
 .dijitAccordionContainer {
